# wallstakeofftool

./: .gitignore  README.md  VERIFICATION.md  pyproject.toml  requirements.txt  test_linear_wall_behavior.py  verify_linear_wall_implementation.py
src/shaftwallstakeofftool/: __init__.py  main.py
src/shaftwallstakeofftool/app/: __init__.py  config.py  controller.py  state.py
src/shaftwallstakeofftool/assets/: .gitkeep
src/shaftwallstakeofftool/modules/: module1_plan_input.py  module2_levels_height.py  module3_draw_dxf.py  module4_export_pdf.py  module5_db.py
src/shaftwallstakeofftool/services/: __init__.py  downloads.py  file_naming.py  units.py
src/shaftwallstakeofftool/ui/: __init__.py  base.py  terminal_ui.py  tkinter_ui.py
tests/: __init__.py  test_module5_db.py
